src/query.pegjs.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Identifier: peg$parseIdentifier, Integer: peg$parseInteger, Query: peg$parseQuery, PairList: peg$parsePairList, Pair: peg$parsePair, LtPair: peg$parseLtPair, GtPair: peg$parseGtPair, LtePrefixPair: peg$parseLtePrefixPair, GtePrefixPair: peg$parseGtePrefixPair, LtePostfixPair: peg$parseLtePostfixPair, GtePostfixPair: peg$parseGtePostfixPair, LtPostfixPair: peg$parseLtPostfixPair, GtPostfixPair: peg$parseGtPostfixPair, LikePair: peg$parseLikePair, DisjunctivePair: peg$parseDisjunctivePair, ConjunctivePair: peg$parseConjunctivePair, FocusPair: peg$parseFocusPair, SortPair: peg$parseSortPair, Direction: peg$parseDirection, OffsetPair: peg$parseOffsetPair, LimitPair: peg$parseLimitPair, Pagination: peg$parsePagination, EqualityPair: peg$parseEqualityPair, BareExprPair: peg$parseBareExprPair, Expr: peg$parseExpr, Transform: peg$parseTransform, Path: peg$parsePath, Criterion: peg$parseCriterion, ProjectionCriterion: peg$parseProjectionCriterion, ConstraintCriterion: peg$parseConstraintCriterion, CriterionId: peg$parseCriterionId, CriterionTransform: peg$parseCriterionTransform, CriterionPath: peg$parseCriterionPath, CriterionOp: peg$parseCriterionOp, Value: peg$parseValue };
  var peg$startRuleFunction = peg$parseIdentifier;

  var peg$c0 = "-";
  var peg$c1 = "&";
  var peg$c2 = "<";
  var peg$c3 = "=";
  var peg$c4 = ">";
  var peg$c5 = "<=";
  var peg$c6 = ">=";
  var peg$c7 = "~";
  var peg$c8 = "?";
  var peg$c9 = "!";
  var peg$c10 = "*";
  var peg$c11 = "^";
  var peg$c12 = "asc";
  var peg$c13 = "ending";
  var peg$c14 = "desc";
  var peg$c15 = "@=";
  var peg$c16 = "#=";
  var peg$c17 = ":";
  var peg$c18 = ".";

  var peg$r0 = /^[^.=<>&:!?~\^@#*[\]]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[&]/;
  var peg$r3 = /^[^&]/;
  var peg$r4 = /^[!#*<>-@\^~]/;

  var peg$e0 = peg$otherExpectation("identifier");
  var peg$e1 = peg$classExpectation([".", "=", "<", ">", "&", ":", "!", "?", "~", "^", "@", "#", "*", "[", "]"], true, false);
  var peg$e2 = peg$otherExpectation("integer");
  var peg$e3 = peg$literalExpectation("-", false);
  var peg$e4 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e5 = peg$literalExpectation("&", false);
  var peg$e6 = peg$literalExpectation("<", false);
  var peg$e7 = peg$literalExpectation("=", false);
  var peg$e8 = peg$literalExpectation(">", false);
  var peg$e9 = peg$literalExpectation("<=", false);
  var peg$e10 = peg$literalExpectation(">=", false);
  var peg$e11 = peg$literalExpectation("~", false);
  var peg$e12 = peg$literalExpectation("?", false);
  var peg$e13 = peg$literalExpectation("!", false);
  var peg$e14 = peg$literalExpectation("*", false);
  var peg$e15 = peg$literalExpectation("^", false);
  var peg$e16 = peg$literalExpectation("asc", true);
  var peg$e17 = peg$literalExpectation("ending", true);
  var peg$e18 = peg$literalExpectation("desc", true);
  var peg$e19 = peg$classExpectation(["&"], false, false);
  var peg$e20 = peg$anyExpectation();
  var peg$e21 = peg$classExpectation(["&"], true, false);
  var peg$e22 = peg$literalExpectation("@=", false);
  var peg$e23 = peg$literalExpectation("#=", false);
  var peg$e24 = peg$literalExpectation(":", false);
  var peg$e25 = peg$literalExpectation(".", false);
  var peg$e26 = peg$classExpectation(["!", "#", "*", "<", [">", "@"], "^", "~"], false, false);

  var peg$f0 = function(id) { return IdentifierPattern.test(id); };
  var peg$f1 = function(n) { return parseInt(n, 10); };
  var peg$f2 = function(pairs) { return mergePairs(pairs); };
  var peg$f3 = function(first, rest) { return [first, ...rest].filter(p => p !== null); };
  var peg$f4 = function(expr, value) { return ["<" + expr, parseValue(value)]; };
  var peg$f5 = function(expr, value) { return [">" + expr, parseValue(value)]; };
  var peg$f6 = function(expr, value) { return ["<=" + expr, parseValue(value)]; };
  var peg$f7 = function(expr, value) { return [">=" + expr, parseValue(value)]; };
  var peg$f8 = function(expr, value) { return ["<=" + expr, parseValue(value)]; };
  var peg$f9 = function(expr, value) { return [">=" + expr, parseValue(value)]; };
  var peg$f10 = function(expr, value) { return ["<" + expr, parseValue(value)]; };
  var peg$f11 = function(expr, value) { return [">" + expr, parseValue(value)]; };
  var peg$f12 = function(expr, value) { return ["~" + expr, parseValue(value)]; };
  var peg$f13 = function(expr, value) { return ["?" + expr, parseValue(value)]; };
  var peg$f14 = function(expr, value) { return ["!" + expr, parseValue(value)]; };
  var peg$f15 = function(expr, value) { return ["*" + expr, parseValue(value)]; };
  var peg$f16 = function(expr, value) { return ["^" + expr, value]; };
  var peg$f17 = function(n) { return n; };
  var peg$f18 = function() { error("invalid sort direction"); };
  var peg$f19 = function(value) { return ["@", value]; };
  var peg$f20 = function(value) { return ["#", value]; };
  var peg$f21 = function(n) { return parseInt(n, 10); };
  var peg$f22 = function() { error("invalid pagination value"); };
  var peg$f23 = function(expr, value) { return [expr, value === "*" ? "*" : parseValue(value)]; };
  var peg$f24 = function(expr) { return [expr, ""]; };
  var peg$f25 = function(target, pipe) {
      return { target, pipe, path: [] };
    };
  var peg$f26 = function(target, pipe, path) {
      return { target, pipe, path };
    };
  var peg$f27 = function(target) {
      return { target, pipe: [], path: [] };
    };
  var peg$f28 = function(op, pipe, path) {
      return { target: op, pipe, path: path ?? [] };
    };
  var peg$f29 = function(id) { return IdentifierPattern.test(id); };
  var peg$f30 = function(id) { return id; };
  var peg$f31 = function(id) { return id; };
  var peg$f32 = function(first, id) { return id; };
  var peg$f33 = function(first, rest) { return [first, ...rest]; };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseIdentifier() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = input.charAt(peg$currPos);
    if (peg$r0.test(s3)) {
      peg$currPos++;
    } else {
      s3 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = input.charAt(peg$currPos);
        if (peg$r0.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
      }
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = peg$currPos;
      s2 = peg$f0(s1);
      if (s2) {
        s2 = undefined;
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    return s0;
  }

  function peg$parseInteger() {
    var s0, s1, s2, s3, s4, s5;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 45) {
      s3 = peg$c0;
      peg$currPos++;
    } else {
      s3 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    s4 = [];
    s5 = input.charAt(peg$currPos);
    if (peg$r1.test(s5)) {
      peg$currPos++;
    } else {
      s5 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s5 !== peg$FAILED) {
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = input.charAt(peg$currPos);
        if (peg$r1.test(s5)) {
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
      }
    } else {
      s4 = peg$FAILED;
    }
    if (s4 !== peg$FAILED) {
      s3 = [s3, s4];
      s2 = s3;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1(s1);
    }
    s0 = s1;
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }

    return s0;
  }

  function peg$parseQuery() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsePairList();
    peg$savedPos = s0;
    s1 = peg$f2(s1);
    s0 = s1;

    return s0;
  }

  function peg$parsePairList() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsePair();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    s2 = [];
    s3 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 38) {
      s4 = peg$c1;
      peg$currPos++;
    } else {
      s4 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s4 !== peg$FAILED) {
      s5 = peg$parsePair();
      if (s5 === peg$FAILED) {
        s5 = null;
      }
      s3 = s5;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 38) {
        s4 = peg$c1;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parsePair();
        if (s5 === peg$FAILED) {
          s5 = null;
        }
        s3 = s5;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s0 = peg$f3(s1, s2);

    return s0;
  }

  function peg$parsePair() {
    var s0;

    s0 = peg$parseLtePrefixPair();
    if (s0 === peg$FAILED) {
      s0 = peg$parseGtePrefixPair();
      if (s0 === peg$FAILED) {
        s0 = peg$parseLtPair();
        if (s0 === peg$FAILED) {
          s0 = peg$parseGtPair();
          if (s0 === peg$FAILED) {
            s0 = peg$parseLtePostfixPair();
            if (s0 === peg$FAILED) {
              s0 = peg$parseGtePostfixPair();
              if (s0 === peg$FAILED) {
                s0 = peg$parseLtPostfixPair();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseGtPostfixPair();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseLikePair();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseDisjunctivePair();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseConjunctivePair();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parseFocusPair();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parseSortPair();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parseOffsetPair();
                              if (s0 === peg$FAILED) {
                                s0 = peg$parseLimitPair();
                                if (s0 === peg$FAILED) {
                                  s0 = peg$parseEqualityPair();
                                  if (s0 === peg$FAILED) {
                                    s0 = peg$parseBareExprPair();
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseLtPair() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 60) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseExpr();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e7); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseValue();
          peg$savedPos = s0;
          s0 = peg$f4(s2, s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGtPair() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 62) {
      s1 = peg$c4;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseExpr();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e7); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseValue();
          peg$savedPos = s0;
          s0 = peg$f5(s2, s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLtePrefixPair() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c5) {
      s1 = peg$c5;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseExpr();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e7); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseValue();
          peg$savedPos = s0;
          s0 = peg$f6(s2, s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGtePrefixPair() {
    var s0, s1, s2, s3, s4;
